# TradeCore

./: .dockerignore  .gitignore  Dockerfile  README.md  start.sh
docs/: benchmarks.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MetricsPanel.tsx  OrderBook.tsx  OrderForm.tsx  PriceChart.tsx  TradeFeed.tsx
frontend/lib/: api.ts  hooks.ts
gateway/: index.js  package-lock.json  package.json  test_client.js
gateway/scripts/: loadtest.js  migrate.js
gateway/src/: db.js  engineClient.js  orderIdGenerator.js  persistence.js  requestIdGenerator.js  routes.js  schema.sql  server.js
matching-engine/: CMakeLists.txt
matching-engine/include/: Command.h  EngineRunner.h  MatchingEngine.h  Metrics.h  NetworkServer.h  Order.h  OrderBook.h  ThreadSafeQueue.h
matching-engine/src/: EngineRunner.cpp  MatchingEngine.cpp  Metrics.cpp  NetworkServer.cpp  OrderBook.cpp  main.cpp
matching-engine/tests/: CMakeLists.txt  test_matching.cpp
